city/build/parser.output
Terminaux inutilisés dans la grammaire

   END


Grammaire

    0 $accept: programme $end

    1 programme: instruction

    2 instruction: operation
    3            | build '{' NL traitements '}'
    4            | build '(' NUMBER ')' '{' NL traitements '}'

    5 traitements: traitement NL traitements
    6            | traitement NL

    7 traitement: maison
    8           | maison coordonnee
    9           | route coordonnee arrow coordonnee

   10 coordonnee: '(' operation ',' operation ',' operation ')'

   11 operation: NUMBER
   12          | '(' operation ')'
   13          | operation '+' operation
   14          | operation '-' operation
   15          | operation '*' operation
   16          | operation '/' operation
   17          | '-' operation


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 4 10 12
')' (41) 4 10 12
'*' (42) 15
'+' (43) 13
',' (44) 10
'-' (45) 14 17
'/' (47) 16
'{' (123) 3 4
'}' (125) 3 4
error (256)
NL (258) 3 4 5 6
END (259)
NUMBER (260) 4 11
build (261) 3 4
maison (262) 7 8
route (263) 9
arrow (264) 9
NEG (265)


Non-terminaux, suivis des règles où ils apparaissent

$accept (20)
    à gauche: 0
programme (21)
    à gauche: 1, à droite: 0
instruction (22)
    à gauche: 2 3 4, à droite: 1
traitements (23)
    à gauche: 5 6, à droite: 3 4 5
traitement (24)
    à gauche: 7 8 9, à droite: 5 6
coordonnee (25)
    à gauche: 10, à droite: 8 9
operation (26)
    à gauche: 11 12 13 14 15 16 17, à droite: 2 10 12 13 14 15 16
    17


État 0

    0 $accept: . programme $end

    NUMBER  décalage et aller à l'état 1
    build   décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    programme    aller à l'état 5
    instruction  aller à l'état 6
    operation    aller à l'état 7


État 1

   11 operation: NUMBER .

    $défaut  réduction par utilisation de la règle 11 (operation)


État 2

    3 instruction: build . '{' NL traitements '}'
    4            | build . '(' NUMBER ')' '{' NL traitements '}'

    '{'  décalage et aller à l'état 8
    '('  décalage et aller à l'état 9


État 3

   17 operation: '-' . operation

    NUMBER  décalage et aller à l'état 1
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 10


État 4

   12 operation: '(' . operation ')'

    NUMBER  décalage et aller à l'état 1
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 11


État 5

    0 $accept: programme . $end

    $end  décalage et aller à l'état 12


État 6

    1 programme: instruction .

    $défaut  réduction par utilisation de la règle 1 (programme)


État 7

    2 instruction: operation .
   13 operation: operation . '+' operation
   14          | operation . '-' operation
   15          | operation . '*' operation
   16          | operation . '/' operation

    '-'  décalage et aller à l'état 13
    '+'  décalage et aller à l'état 14
    '*'  décalage et aller à l'état 15
    '/'  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 2 (instruction)


État 8

    3 instruction: build '{' . NL traitements '}'

    NL  décalage et aller à l'état 17


État 9

    4 instruction: build '(' . NUMBER ')' '{' NL traitements '}'

    NUMBER  décalage et aller à l'état 18


État 10

   13 operation: operation . '+' operation
   14          | operation . '-' operation
   15          | operation . '*' operation
   16          | operation . '/' operation
   17          | '-' operation .

    $défaut  réduction par utilisation de la règle 17 (operation)


État 11

   12 operation: '(' operation . ')'
   13          | operation . '+' operation
   14          | operation . '-' operation
   15          | operation . '*' operation
   16          | operation . '/' operation

    '-'  décalage et aller à l'état 13
    '+'  décalage et aller à l'état 14
    '*'  décalage et aller à l'état 15
    '/'  décalage et aller à l'état 16
    ')'  décalage et aller à l'état 19


État 12

    0 $accept: programme $end .

    $défaut  accepter


État 13

   14 operation: operation '-' . operation

    NUMBER  décalage et aller à l'état 1
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 20


État 14

   13 operation: operation '+' . operation

    NUMBER  décalage et aller à l'état 1
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 21


État 15

   15 operation: operation '*' . operation

    NUMBER  décalage et aller à l'état 1
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 22


État 16

   16 operation: operation '/' . operation

    NUMBER  décalage et aller à l'état 1
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 23


État 17

    3 instruction: build '{' NL . traitements '}'

    maison  décalage et aller à l'état 24
    route   décalage et aller à l'état 25

    traitements  aller à l'état 26
    traitement   aller à l'état 27


État 18

    4 instruction: build '(' NUMBER . ')' '{' NL traitements '}'

    ')'  décalage et aller à l'état 28


État 19

   12 operation: '(' operation ')' .

    $défaut  réduction par utilisation de la règle 12 (operation)


État 20

   13 operation: operation . '+' operation
   14          | operation . '-' operation
   14          | operation '-' operation .
   15          | operation . '*' operation
   16          | operation . '/' operation

    '*'  décalage et aller à l'état 15
    '/'  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 14 (operation)


État 21

   13 operation: operation . '+' operation
   13          | operation '+' operation .
   14          | operation . '-' operation
   15          | operation . '*' operation
   16          | operation . '/' operation

    '*'  décalage et aller à l'état 15
    '/'  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 13 (operation)


État 22

   13 operation: operation . '+' operation
   14          | operation . '-' operation
   15          | operation . '*' operation
   15          | operation '*' operation .
   16          | operation . '/' operation

    $défaut  réduction par utilisation de la règle 15 (operation)


État 23

   13 operation: operation . '+' operation
   14          | operation . '-' operation
   15          | operation . '*' operation
   16          | operation . '/' operation
   16          | operation '/' operation .

    $défaut  réduction par utilisation de la règle 16 (operation)


État 24

    7 traitement: maison .
    8           | maison . coordonnee

    '('  décalage et aller à l'état 29

    $défaut  réduction par utilisation de la règle 7 (traitement)

    coordonnee  aller à l'état 30


État 25

    9 traitement: route . coordonnee arrow coordonnee

    '('  décalage et aller à l'état 29

    coordonnee  aller à l'état 31


État 26

    3 instruction: build '{' NL traitements . '}'

    '}'  décalage et aller à l'état 32


État 27

    5 traitements: traitement . NL traitements
    6            | traitement . NL

    NL  décalage et aller à l'état 33


État 28

    4 instruction: build '(' NUMBER ')' . '{' NL traitements '}'

    '{'  décalage et aller à l'état 34


État 29

   10 coordonnee: '(' . operation ',' operation ',' operation ')'

    NUMBER  décalage et aller à l'état 1
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 35


État 30

    8 traitement: maison coordonnee .

    $défaut  réduction par utilisation de la règle 8 (traitement)


État 31

    9 traitement: route coordonnee . arrow coordonnee

    arrow  décalage et aller à l'état 36


État 32

    3 instruction: build '{' NL traitements '}' .

    $défaut  réduction par utilisation de la règle 3 (instruction)


État 33

    5 traitements: traitement NL . traitements
    6            | traitement NL .

    maison  décalage et aller à l'état 24
    route   décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 6 (traitements)

    traitements  aller à l'état 37
    traitement   aller à l'état 27


État 34

    4 instruction: build '(' NUMBER ')' '{' . NL traitements '}'

    NL  décalage et aller à l'état 38


État 35

   10 coordonnee: '(' operation . ',' operation ',' operation ')'
   13 operation: operation . '+' operation
   14          | operation . '-' operation
   15          | operation . '*' operation
   16          | operation . '/' operation

    '-'  décalage et aller à l'état 13
    '+'  décalage et aller à l'état 14
    '*'  décalage et aller à l'état 15
    '/'  décalage et aller à l'état 16
    ','  décalage et aller à l'état 39


État 36

    9 traitement: route coordonnee arrow . coordonnee

    '('  décalage et aller à l'état 29

    coordonnee  aller à l'état 40


État 37

    5 traitements: traitement NL traitements .

    $défaut  réduction par utilisation de la règle 5 (traitements)


État 38

    4 instruction: build '(' NUMBER ')' '{' NL . traitements '}'

    maison  décalage et aller à l'état 24
    route   décalage et aller à l'état 25

    traitements  aller à l'état 41
    traitement   aller à l'état 27


État 39

   10 coordonnee: '(' operation ',' . operation ',' operation ')'

    NUMBER  décalage et aller à l'état 1
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 42


État 40

    9 traitement: route coordonnee arrow coordonnee .

    $défaut  réduction par utilisation de la règle 9 (traitement)


État 41

    4 instruction: build '(' NUMBER ')' '{' NL traitements . '}'

    '}'  décalage et aller à l'état 43


État 42

   10 coordonnee: '(' operation ',' operation . ',' operation ')'
   13 operation: operation . '+' operation
   14          | operation . '-' operation
   15          | operation . '*' operation
   16          | operation . '/' operation

    '-'  décalage et aller à l'état 13
    '+'  décalage et aller à l'état 14
    '*'  décalage et aller à l'état 15
    '/'  décalage et aller à l'état 16
    ','  décalage et aller à l'état 44


État 43

    4 instruction: build '(' NUMBER ')' '{' NL traitements '}' .

    $défaut  réduction par utilisation de la règle 4 (instruction)


État 44

   10 coordonnee: '(' operation ',' operation ',' . operation ')'

    NUMBER  décalage et aller à l'état 1
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 45


État 45

   10 coordonnee: '(' operation ',' operation ',' operation . ')'
   13 operation: operation . '+' operation
   14          | operation . '-' operation
   15          | operation . '*' operation
   16          | operation . '/' operation

    '-'  décalage et aller à l'état 13
    '+'  décalage et aller à l'état 14
    '*'  décalage et aller à l'état 15
    '/'  décalage et aller à l'état 16
    ')'  décalage et aller à l'état 46


État 46

   10 coordonnee: '(' operation ',' operation ',' operation ')' .

    $défaut  réduction par utilisation de la règle 10 (coordonnee)
